AC_INIT([UNISIM ArmSec ARMv7 to BINSEC-DBA translator package], [1.0.9], [Yves Lhuillier <yves.lhuillier@cea.fr>], [unisim-armsec])
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([subdir-objects tar-pax])
AC_PATH_PROGS(SH, sh)
AC_PROG_INSTALL
AC_PROG_LN_S
AC_CONFIG_SUBDIRS([genisslib]) 
AC_CONFIG_SUBDIRS([armsec]) 
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
