AC_INIT([UNISIM Mipselsec little endian Mips symbolic translator package], [0.1.0], [Yves Lhuillier <yves.lhuillier@cea.fr>], [unisim-mipselsec])
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([subdir-objects tar-pax])
AC_PATH_PROGS(SH, sh)
AC_PROG_INSTALL
AC_PROG_LN_S
AC_CONFIG_SUBDIRS([genisslib]) 
AC_CONFIG_SUBDIRS([mipselsec]) 
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
